--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Odin Recipes</title>
+    <title>Ricky's Favorite Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Ricky's Favorite Recipes</h1>
     <ul>
         <li><a href="recipes/beans.html">Refried Beans</a></li>
+        <li><a href="recipes/tortillas.html">Corn Tortillas</a></li>
+        <li><a href="recipes/tamales.html">Beef Tamales</a></li>
     </ul>
 </body>
 </html>
