Apply external CSS file to all recipe html files
Used selectors to add some color and more interesting font choices to the main page and each subsequent recipe page. Lists are left-aligned, everything else centered. Applied orange colors throughout webpages. Still need to add some more values to the .block class.

--- a/recipes/tamales.html
+++ b/recipes/tamales.html
@@ -2,14 +2,14 @@
 
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <title>Beef Tamales</title>
 </head>
-<body>
+<body class="main">
     <h1>Beef Tamales</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7563065.jpg&q=60&c=sc&orient=true&poi=auto&h=512" height="300">
     <p>These are a great dish for birthdays, holidays, really all kinds of celebrations! They're a bit more complicated to make but definitely worth it!</p>
-    
     <h2>Ingredients</h2>
     <ul>
         <li>4 lbs boneless chuck roast</li>
@@ -27,7 +27,6 @@
         <li>9 cups masa harina</li>
         <li>salt</li>
     </ul>
-
     <h2>Steps</h2>
     <ol>
         <li>Simmer boil beef and garlic in a large pot with water until beef is tender and shreds easily, about 3&frac12; hours.</li>
@@ -42,7 +41,6 @@
         <li>Fold the two long edges of the corn husk inward and then fold the flat point down to seal the contents of the husk.</li>
         <li>Place tamales in a steaming pot and steam for about 1 hour.</li>
     </ol>
-
     <h3>References</h3>
     <p>Recipe directions adapted from <a href="https://www.allrecipes.com/recipe/34759/beef-tamales/" target="_blank" rel="noreferrer">allrecipes</a></p>
 </body>
