--- a/recipes/tortillas.html
+++ b/recipes/tortillas.html
@@ -2,21 +2,19 @@
 
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <title>Corn Tortillas</title>
 </head>
-
-<body>
+<body class="main">
     <h1>Corn Tortillas</h1>
     <img src="https://www.allrecipes.com/thmb/tXp7pUpv2YcXDy9QEaCa25PPwIQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/17500-Corn-Tortillas-DDMFS-4x3-39-46944d4d03f544e89449dd4a4fa560bb.jpg" alt="a stack of corn tortillas on a cutting board" height="300">
     <p>Most dishes in Mexican cuisine rely on the humble tortilla as the preferred method of delivery! From <em>tacos</em>, to <em>mole</em>, any dish will benefit from adding this recipe on the side!</p>
-
     <h2>Ingredients</h2>
     <ul>
         <li>1&frac34; cups masa harina</li>
         <li>1&frac18; cups hot water</li>
     </ul>
-
     <h2>Steps</h2>
     <ol>
         <li>Mix together the masa harina and hot water in a medium bowl until thoroughly combined.</li>
@@ -27,7 +25,6 @@
         <li>Using a tortilla press, rolling pin, or your hands, press each ball flat between two sheets of plastic wrap.</li>
         <li>Cook on the preheated skillet until browned and slightly puffy. (Around 30 seconds each side)</li>
     </ol>
-
     <h3>References</h3>
     <p>Recipe directions adapted from <a href="https://www.allrecipes.com/recipe/17500/corn-tortillas/" target="_blank" rel="noreferrer">allrecipes</a></p>
 </body>
