--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Ricky's Favorite Recipes</title>
 </head>
 
-<body>
+<body class="main">
     <h1>Ricky's Favorite Recipes</h1>
-    <ul>
-        <li><a href="recipes/beans.html">Refried Beans</a></li>
-        <li><a href="recipes/tortillas.html">Corn Tortillas</a></li>
-        <li><a href="recipes/tamales.html">Beef Tamales</a></li>
-    </ul>
+    <p class="block">This is a working collection of some of my personal favorite dishes, primarily from my own Mexican background!</p>
+    <h2>Mexican</h2>
+    <div>
+        <p><a href="recipes/beans.html">Refried Beans</a></p>
+        <p><a href="recipes/tortillas.html">Corn Tortillas</a></p>
+        <p><a href="recipes/tamales.html">Beef Tamales</a></p>
+    </div>
 </body>
 </html>
