Change format to avoid applying center to everything
Previously, every element had been text-align: center, so this iteration I changed this to only center headings, images, and main links, and left everything else left-aligned.

--- a/recipes/tamales.html
+++ b/recipes/tamales.html
@@ -8,7 +8,7 @@
 </head>
 <body class="main">
     <h1>Beef Tamales</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7563065.jpg&q=60&c=sc&orient=true&poi=auto&h=512" height="300">
+    <div class="center"><img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F7563065.jpg&q=60&c=sc&orient=true&poi=auto&h=512" width="300px"></div>
     <p>These are a great dish for birthdays, holidays, really all kinds of celebrations! They're a bit more complicated to make but definitely worth it!</p>
     <h2>Ingredients</h2>
     <ul>
