--- a/recipes/tortillas.html
+++ b/recipes/tortillas.html
@@ -8,7 +8,7 @@
 </head>
 <body class="main">
     <h1>Corn Tortillas</h1>
-    <img src="https://www.allrecipes.com/thmb/tXp7pUpv2YcXDy9QEaCa25PPwIQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/17500-Corn-Tortillas-DDMFS-4x3-39-46944d4d03f544e89449dd4a4fa560bb.jpg" alt="a stack of corn tortillas on a cutting board" height="300">
+    <div class="center"><img src="https://www.allrecipes.com/thmb/tXp7pUpv2YcXDy9QEaCa25PPwIQ=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/17500-Corn-Tortillas-DDMFS-4x3-39-46944d4d03f544e89449dd4a4fa560bb.jpg" alt="a stack of corn tortillas on a cutting board" width="300px"></div>
     <p>Most dishes in Mexican cuisine rely on the humble tortilla as the preferred method of delivery! From <em>tacos</em>, to <em>mole</em>, any dish will benefit from adding this recipe on the side!</p>
     <h2>Ingredients</h2>
     <ul>
