Redo main recipe list, add placeholder banner
Use padding and margin values to make the anchors on the initial page have a button-style look and use :hover selector to enhance visual feedback. Also add banner as a placeholder that will eventually have home button and be on every page.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 
 <body class="main">
+    <div class="banner">Banner</div>
     <h1>Ricky's Favorite Recipes</h1>
-    <p class="block">This is a working collection of some of my personal favorite dishes, primarily from my own Mexican background!</p>
+    <p>This is a working collection of some of my personal favorite dishes, primarily from my own Mexican background!</p>
     <h2>Mexican</h2>
     <div>
-        <p><a href="recipes/beans.html">Refried Beans</a></p>
-        <p><a href="recipes/tortillas.html">Corn Tortillas</a></p>
-        <p><a href="recipes/tamales.html">Beef Tamales</a></p>
+        <a class="main-link" href="recipes/beans.html">Refried Beans</a>
+        <a class="main-link" href="recipes/tortillas.html">Corn Tortillas</a>
+        <a class="main-link" href="recipes/tamales.html">Beef Tamales</a>
     </div>
 </body>
 </html>
