Add flex buttons to banner with placeholder link
Start playing around with flexbox to add some navigation buttons to the banner on the index.html file and using justify-content to center them.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body class="main">
-    <div class="banner">Banner</div>
+    <div class="banner">
+        <a class="banner-button-1" href="index.html">Page 1</a>
+        <a class="banner-button-2" href="index.html">Page 2</a>
+        <a class="banner-button-3" href="index.html">Page 3</a>
+    </div>
     <h1>Ricky's Favorite Recipes</h1>
     <p>This is a working collection of some of my personal favorite dishes, primarily from my own Mexican background!</p>
     <h2>Mexican</h2>
